fdo#60581 Display import templates only when its allowed.

Change-Id: I004b50118b1b261de4807660012b55eeecff41a3