sfx2/inc/sfx2/templateabstractview.hxx
@@ -99,6 +99,9 @@ public:
     // Return if we can have regions inside the current region
     virtual bool isNestedRegionAllowed () const = 0;
 
+    // Return if we can import templates to the current region
+    virtual bool isImportAllowed () const = 0;
+
     sal_uInt16 getCurRegionId () const;
 
     const OUString& getCurRegionName () const;
