sfx2/source/control/templateremoteview.cxx
@@ -174,4 +174,9 @@ bool TemplateRemoteView::isNestedRegionAllowed() const
     return true;
 }
 
+bool TemplateRemoteView::isImportAllowed() const
+{
+    return true;
+}
+
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
