sfx2/source/doc/templatedlg.cxx
@@ -644,6 +644,7 @@ IMPL_LINK_NOARG(SfxTemplateManagerDlg, OpenRegionHdl)
     maSelTemplates.clear();
 
     mpViewBar->ShowItem(TBI_TEMPLATE_FOLDER_NEW,mpCurView->isNestedRegionAllowed());
+    mpViewBar->ShowItem(TBI_TEMPLATE_IMPORT,mpCurView->isImportAllowed());
 
     mpTemplateBar->Hide();
     mpViewBar->Show();
